# microplex-uk

./: README.md  pyproject.toml
src/microplex_uk/: __init__.py  geography.py  source_manifests.py
src/microplex_uk/data_sources/: __init__.py  frs.py  spi.py  was.py
src/microplex_uk/manifests/: frs.json  spi.json  was.json
src/microplex_uk/pipelines/: __init__.py  candidate.py
src/microplex_uk/policyengine/: __init__.py  harness.py
src/microplex_uk/targets/: __init__.py  provider.py
tests/data_sources/: test_frs.py  test_spi.py  test_was.py
tests/pipelines/: test_candidate.py
tests/policyengine/: test_harness.py
tests/targets/: test_provider.py
